// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/Button Active 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium muncher-button--active"
    data-title="Active Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Default Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Disabled 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Disabled Button"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Large 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--large"
    data-title="Large Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Secondary 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--secondary muncher-button--medium"
    data-title="Secondary Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Small 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--small"
    data-title="Small Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Submit 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Submit Button"
    disabled={false}
    type="submit"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Active 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium muncher-button--active"
    data-title="Active DropDown"
    disabled={false}
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="18"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Default 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Default Dropdown"
    disabled={false}
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="18"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Disabled 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Disabled DropDown"
    disabled={true}
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="18"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Large 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--primary muncher-button--large"
    data-title="Large DropDown"
    disabled={false}
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="18"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Secondary 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--secondary muncher-button--medium"
    data-title="Secondary DropDown"
    disabled={false}
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="18"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Small 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--primary muncher-button--small"
    data-title="Small DropDown"
    disabled={false}
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      fill="none"
      height="18"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  
</div>
`;

exports[`Storyshots Buttons/Dropdown Button With Text 1`] = `
<div
  className="muncher-dropdown"
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="DropDown with text"
    disabled={false}
    onMouseDown={[Function]}
    type="button"
  >
    <p>
      Text drop down
    </p>
  </button>
  
</div>
`;

exports[`Storyshots Icons/Muncher Icon Default 1`] = `
<span
  className="span-muncher--icon muncher-icon--medium"
  data-title="Muncher Home"
>
  <svg
    fill="none"
    height="18"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      ry="2"
      width="18"
      x="3"
      y="4"
    />
    <line
      x1="16"
      x2="16"
      y1="2"
      y2="6"
    />
    <line
      x1="8"
      x2="8"
      y1="2"
      y2="6"
    />
    <line
      x1="7"
      x2="17"
      y1="10"
      y2="10"
    />
    <line
      x1="7"
      x2="17"
      y1="14"
      y2="14"
    />
    <line
      x1="7"
      x2="17"
      y1="18"
      y2="18"
    />
  </svg>
</span>
`;

exports[`Storyshots Icons/Muncher Icon Large 1`] = `
<span
  className="span-muncher--icon muncher-icon--large"
  data-title="Muncher Home"
>
  <svg
    fill="none"
    height="18"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      ry="2"
      width="18"
      x="3"
      y="4"
    />
    <line
      x1="16"
      x2="16"
      y1="2"
      y2="6"
    />
    <line
      x1="8"
      x2="8"
      y1="2"
      y2="6"
    />
    <line
      x1="7"
      x2="17"
      y1="10"
      y2="10"
    />
    <line
      x1="7"
      x2="17"
      y1="14"
      y2="14"
    />
    <line
      x1="7"
      x2="17"
      y1="18"
      y2="18"
    />
  </svg>
</span>
`;

exports[`Storyshots Icons/Muncher Icon Small 1`] = `
<span
  className="span-muncher--icon muncher-icon--small"
  data-title="Muncher Home"
>
  <svg
    fill="none"
    height="18"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      ry="2"
      width="18"
      x="3"
      y="4"
    />
    <line
      x1="16"
      x2="16"
      y1="2"
      y2="6"
    />
    <line
      x1="8"
      x2="8"
      y1="2"
      y2="6"
    />
    <line
      x1="7"
      x2="17"
      y1="10"
      y2="10"
    />
    <line
      x1="7"
      x2="17"
      y1="14"
      y2="14"
    />
    <line
      x1="7"
      x2="17"
      y1="18"
      y2="18"
    />
  </svg>
</span>
`;

exports[`Storyshots Input/Text Input Default 1`] = `
<input
  autoComplete="off"
  className="muncher-text-input"
  name="query"
  placeholder="Type your query"
  type="text"
/>
`;
